Images and page linked

--- a/bheem.html
+++ b/bheem.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Cartoon Images</title>
+    <title>Bheem</title>
 </head>
 <body>
-    Cartoon Image Gallery
+    <h1>Chota Bheem</h1>
 </body>
 </html>
