--- a/t&j.html
+++ b/t&j.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Cartoon Images</title>
+    
+    <title>tom and jerry</title>
 </head>
 <body>
-    Cartoon Image Gallery
+    <h1>Tom and jerry</h1>
 </body>
 </html>
