--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>Cartoon Images</title>
 </head>
 <body>
-    Cartoon Image Gallery
+    <h1>Cartoon Image Gallery</h1>
+    <img src="cartoons.jpg" height="300px"><br><br>
+
+    <a href="bheem.html">Chota Bheem</a> <br>
+    <a href="shinchan.html">Shinchan</a> <br>
+    <a href="t&j.html">Tom and jerry</a> <br>
+        
 </body>
 </html>
