Fix broken path

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 </head>
 <body>
     <h1>Cartoon Image Gallery</h1>
-    <img src="cartoons.jpg" height="300px"><br><br>
+    <img src="./images/cartoons.jpg" alt="Cartoons" height="300px"><br><br>
 
-    <a href="bheem.html">Chota Bheem</a> <br>
-    <a href="shinchan.html">Shinchan</a> <br>
-    <a href="t&j.html">Tom and jerry</a> <br>
+    <a href="./pages/bheem.html">Chota Bheem</a> <br>
+    <a href="./pages/shinchan.html">Shinchan</a> <br>
+    <a href="./pages/t&j.html">Tom and jerry</a> <br>
+
+    
         
 </body>
 </html>
