--- a/pages/bheem.html
+++ b/pages/bheem.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <h1>Chota Bheem</h1>
-    <img src="Bheem.jpg" alt="Bheem" height="300px">
+    <img src="./../images/Bheem.jpg" alt="Bheem" height="300px"> <br>
+
+    <a href="./../index.html">Back</a>
 </body>
 </html>
