--- a/pages/t&j.html
+++ b/pages/t&j.html
@@ -7,6 +7,8 @@
 <body>
     <h1>Tom and jerry</h1>
 
-    <img src="T&J.jpg" alt="Tom and Jerry" height="300px">
+    <img src="./../images/T&J.jpg" alt="Tom and Jerry" height="300px"><br>
+
+    <a href="./../index.html">Back</a>
 </body>
 </html>
